--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
         "@tailwindcss/vite": "^4.1.8",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "dexie": "^4.0.11",
+        "immer": "^10.1.1",
         "lucide-react": "^0.513.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "tailwind-merge": "^3.3.0",
-        "tailwindcss": "^4.1.8"
+        "tailwindcss": "^4.1.8",
+        "uuid": "^11.1.0",
+        "zustand": "^5.0.5"
     },
     "devDependencies": {
         "@eslint/js": "^9.25.0",
