--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-progress": "^1.1.7",
         "@radix-ui/react-slot": "^1.2.3",
         "@tailwindcss/vite": "^4.1.8",
         "class-variance-authority": "^0.7.1",
@@ -18,8 +20,10 @@
         "dexie": "^4.0.11",
         "immer": "^10.1.1",
         "lucide-react": "^0.513.0",
+        "next-themes": "^0.4.6",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "sonner": "^2.0.5",
         "tailwind-merge": "^3.3.0",
         "tailwindcss": "^4.1.8",
         "uuid": "^11.1.0",
